# meat-boy

./: .clang-format  CMakeLists.txt  README.md  lvl1.txt  test.csv
.circleci/: config.yml
docs/html/: _abstract_factory_8h_source.html  _camera_8cpp_source.html  _camera_8h_source.html  _concrete_factory_8cpp_source.html  _concrete_factory_8h_source.html  _constants_8h_source.html  _entity_8h_source.html  _entity_view_8cpp_source.html  _entity_view_8h_source.html  _game_8cpp_source.html  _game_8h_source.html  _goal_8cpp_source.html  _goal_8h_source.html  _observer_pattern_8h_source.html  _player_8cpp_source.html  _player_8h_source.html  _state_manager_8cpp_source.html  _state_manager_8h_source.html  _stopwatch_8cpp_source.html  _stopwatch_8h_source.html  _wall_8cpp_source.html  _wall_8h_source.html  _world_8cpp_source.html  _world_8h_source.html  annotated.html  class_controller_1_1_abstract_factory-members.html  class_controller_1_1_abstract_factory.html  class_controller_1_1_concrete_factory-members.html  class_controller_1_1_concrete_factory.html  class_controller_1_1_game-members.html  class_controller_1_1_game.html  class_controller_1_1_state_manager-members.html  class_controller_1_1_state_manager.html  class_entity_view-members.html  class_entity_view.html  class_model_1_1_camera-members.html  class_model_1_1_camera.html  class_model_1_1_entity-members.html  class_model_1_1_entity.html  class_model_1_1_goal-members.html  (+287 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_2.js  enums_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+21 more)
docs/latex/: _abstract_factory_8h_source.tex  _camera_8cpp_source.tex  _camera_8h_source.tex  _concrete_factory_8cpp_source.tex  _concrete_factory_8h_source.tex  _constants_8h_source.tex  _entity_8h_source.tex  _entity_view_8cpp_source.tex  _entity_view_8h_source.tex  _game_8cpp_source.tex  _game_8h_source.tex  _goal_8cpp_source.tex  _goal_8h_source.tex  _observer_pattern_8h_source.tex  _player_8cpp_source.tex  _player_8h_source.tex  _state_manager_8cpp_source.tex  _state_manager_8h_source.tex  _stopwatch_8cpp_source.tex  _stopwatch_8h_source.tex  _wall_8cpp_source.tex  _wall_8h_source.tex  _world_8cpp_source.tex  _world_8h_source.tex  annotated.tex  class_controller_1_1_abstract_factory.eps  class_controller_1_1_abstract_factory.tex  class_controller_1_1_concrete_factory.eps  class_controller_1_1_concrete_factory.tex  class_controller_1_1_game.tex  class_controller_1_1_state_manager.tex  class_entity_view.eps  class_entity_view.tex  class_model_1_1_camera.tex  class_model_1_1_entity.eps  class_model_1_1_entity.tex  class_model_1_1_goal.eps  class_model_1_1_goal.tex  class_model_1_1_observer.eps  class_model_1_1_observer.tex  (+146 more)
levels/: test.csv  tileset.tsx
levels/level-1/: level-1.csv  level-1.tiled-session  level-1.tmx
resources/levels/: level-1.csv  level-2.csv  level-3.csv  levels-info.json
src/: main.cpp
src/controller/: AbstractFactory.h  ConcreteFactory.cpp  ConcreteFactory.h  Game.cpp  Game.h  StateManager.cpp  StateManager.h
src/logic/: Camera.cpp  Camera.h  Entity.h  EntityMgr.cpp  EntityMgr.h  StateMgr.cpp  StateMgr.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h
src/model/: AbstractFactory.h  Camera.cpp  Camera.h  ConcreteFactory.cpp  ConcreteFactory.h  Constants.h  Entity.h  Goal.cpp  Goal.h  ObserverPattern.h  Player.cpp  Player.h  Wall.cpp  Wall.h  World.cpp  World.h
src/representation/: Game.cpp  Game.h  LevelEnd.cpp  LevelEnd.h  Player.cpp  Player.h  Wall.cpp  Wall.h
src/util/: Stopwatch.cpp  Stopwatch.h  Vec2.h  floatRectangle.h  floatVector2.h  json.hpp
src/view/: EntityView.cpp  EntityView.h
